@@ -87,7 +87,7 @@ Applications</a></b></font></td></tr></table></center>
 <center><hr></center>
 <font face="Arial,helvetica,geneva,sans-serif,lucida">
 <p>
-<font size=+1><b>Last Stable Version: 2.0.0</b></font><br>
+<font size=+1><b>Last Stable Version: 2.0.1</b></font><br>
 Versions newer than this may have problems, so use at your own risk!<br>
 
 <P>
@@ -112,7 +112,6 @@ set to 'Glade'.
 <ul>
 
 <li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.1 Tarball</a> (3.0 MB)<BR>
-<li><a href="http://ftp.gnome.org/pub/GNOME/sources/glade/2.0/">Glade 2.0.0 Tarball</a> (2.7 MB)<BR>
 <p>
 This version of Glade is for GTK+ 2.x and GNOME 2.x.
 
