@@ -99,6 +99,13 @@ Applications</a></b></font></td></tr></table></center>
 <ul type="square">
 
 
+<li><b>Version 2.0.1 (Nov 9 2003)</b>
+<ul>
+<li>Bug fixes.
+</ul>
+</li><br>
+
+
 <li><b>Version 2.0.0 (Apr 11 2003)</b>
 <ul>
 <li>Hide GNOME widgets and stock items in GTK+ projects.
