@@ -1,3 +1,9 @@
+2003-11-26  Damon Chaplin  <damon@gnome.org>
+
+	* download.html: set stable release to 2.0.1.
+
+	* history.html: added 2.0.1 info.
+
 2003-11-18  Damon Chaplin  <damon@gnome.org>
 
 	* apps.html: added boardgametool and polyxmass.
